Fix asset paths for GitHub Pages

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -22,6 +22,6 @@
   <footer>
     &copy; 2025 My Piano. All rights reserved.
   </footer>
-<script src="/assets/js/search.js"></script>
+<script src="{{ '/assets/js/search.js' | url }}"></script>
 </body>
 </html>
