Fix pathPrefix for GitHub Pages

--- a/src/_includes/components/post-card.njk
+++ b/src/_includes/components/post-card.njk
@@ -1,4 +1,4 @@
-<a href="{{ post.url }}">
+<a href="{{ post.url | url }}">
   <div class="post-card">
     <h2>{{ post.data.title }}</h2>
     <time>{{ post.date | date("dd MMM yyyy") }}</time>
