--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
 <body>
   <header>
   <h1>
-    <a href="/" style="color: #ffcc66; text-decoration: none;">My Piano</a>
+    <a href="{{ '/' | url }}" style="color: #ffcc66; text-decoration: none;">My Piano</a>
   </h1>
   {% if siteDescription %}
     <p>{{ siteDescription }}</p>
