--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -8,7 +8,7 @@
 <body>
   <header>
   <h1>
-    <a href="/" style="color: #ffcc66; text-decoration: none;">My Piano</a>
+    <a href="{{ '/' | url }}" style="color: #ffcc66; text-decoration: none;">My Piano</a>
   </h1>
   <hr class="logo-separator">
   <h2>{{ title }}</h2>
